fix: page height, horizontal scroll

--- a/src/style.css
+++ b/src/style.css
@@ -23,10 +23,9 @@
 
 html {
   background-color: var(--background);
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
+
 .bookmarkbody {
   margin: var(--bkmrk-margin);
 }
@@ -38,9 +37,15 @@ html {
   align-content: var(--align);
   padding: 60px 20px 0 20px;
   gap: 15px;
-  max-height:100vh;
+  height: 100vh;
+  width: 100%;
+  white-space: nowrap;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
 .category {
+  max-height: 90%;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   align-content:space-between;
